--- a/src/github.com/hulaalol/gosm/web/index.html
+++ b/src/github.com/hulaalol/gosm/web/index.html
@@ -23,22 +23,31 @@
 </head>
 <body>
     <div class="btn-group">
-        <button id="autoupdate" onclick="toggleMapUpdate()">Toggle MapUpdate</button>
+        <!-- <button id="autoupdate" onclick="toggleMapUpdate()">Toggle MapUpdate</button> -->
         <button id="hideGraph" onclick="hideGraph()">Hide graph</button>
         <button id="car" onclick=selectCar()>Car</button>
         <button id="bike" onclick="selectBike()">Cyclist</button>
         <button id="pedestrian" onclick="selectPede()">Pedestrian</button>
-        <button id="calculate route" onclick="calcRoute()">Calculate Route</button>
-      </div>
-  <!-- 
-  <form method="POST" action="/">     
-      <label>Name</label><input name="name" type="text" value="" />
-      <label>Address</label><input name="address" type="text" value="" />
-      <input type="submit" value="submit" />
-  </form> -->
-<div>
 
-</div>
-<div class="unlocked" id="mapid"></div>
+        <button id="distance" onclick="selectDistance()">Distance</button>
+        <button id="time" onclick="selectTime()">Traveltime</button>
+
+        <button id="calculate route" onclick="calcRoute()">Calculate Route</button>
+
+        <div id="loader" class="loaderC"></div>
+
+      </div>
+  <div class="container">
+    <div id="routeinfo"></div>
+    <div class="unlocked" id="mapid"></div>
+
+  </div>   
+
+
+
+
+
+
+
 </body>
 </html>
