game loop stage 1

--- a/src/github.com/hulaalol/gosm/web/index.html
+++ b/src/github.com/hulaalol/gosm/web/index.html
@@ -55,10 +55,10 @@
       </tr>
 
       <tr>
-        <td id="a1">
+        <td class="answerbutton" id="a1" onclick="answerQuestion(event)">
           answer1
         </td>
-        <td id="a2">
+        <td class="answerbutton" id="a2" onclick="answerQuestion(event)">
           answer2
         </td>
 
@@ -66,10 +66,10 @@
       </tr>
 
       <tr>
-        <td id="a3">
+        <td class="answerbutton" id="a3" onclick="answerQuestion(event)">
           answer3
         </td>
-        <td id="a4">
+        <td class="answerbutton" id="a4" onclick="answerQuestion(event)">
           answer4
         </td>
       </tr>
