performance upgrades for queries

--- a/src/github.com/hulaalol/gosm/web/index.html
+++ b/src/github.com/hulaalol/gosm/web/index.html
@@ -74,6 +74,16 @@
         </td>
       </tr>
 
+      <tr>
+        <td colspan="2">
+          <img id ="depiction" src="" alt="depiction" width="400">
+        </td>
+      </tr>
+
+      <tr >
+        <td id="abstract" colspan="2">
+        </td>
+      </tr>
     </table>
 
     <!--
