--- a/src/github.com/hulaalol/gosm/web/index.html
+++ b/src/github.com/hulaalol/gosm/web/index.html
@@ -96,6 +96,17 @@
     </table>
   </div>
 
+  <div id="finishWindowContainer">
+    <table id ="finishWindow">
+      <tr >
+        <td id="finishText"> You reached the finish line!</td>
+      </tr>
+      <tr>
+        <td class="answerbutton" id="finish" onclick="location.reload()">Play again!</td>
+      </tr>
+    </table>
+  </div>
+
   <div id="loader" class="loaderC"></div>
 
   <div id="distanceDisplay">
