final string manipulations

--- a/src/github.com/hulaalol/gosm/web/index.html
+++ b/src/github.com/hulaalol/gosm/web/index.html
@@ -76,10 +76,13 @@
       <tr >
         <td id="abstract"></td>
       </tr>
-      <tr>
+      <tr id="depictionRow">
         <td id="depictionCell">
           <img id ="depiction" src="">
         </td>
+      </tr>
+      <tr>
+        <td class="answerbutton" id="continue" onclick="continueGame(event)">Continue</td>
       </tr>
     </table>
   </div>
